--- a/app/src/assets/page_style.css
+++ b/app/src/assets/page_style.css
@@ -19,3 +19,21 @@ body {
     margin: 10px;
     padding: 15px;
 }
+
+
+.selected {
+    background-color: grey;
+}
+
+div.back_office_entity {
+    border-style: solid;
+    border-width: 1px;
+}
+
+div.back_office_entity:hover {
+    background-color: lightgray;
+}
+
+div.back_office_entity.selected {
+    background-color: darkgray;
+}
